force-app/main/default/objects/Contact/fields/Customer_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiment__c</fullName>
    <label>Customer Sentiment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>