force-app/main/default/objects/Contact/fields/Likes_Rugby__c.field-meta.xml
<CustomField>
    <fullName>Likes_Rugby__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Likes Rugby</label>
    <type>Checkbox</type>
</CustomField>