force-app/main/default/objects/Contact/fields/People_Leader__c.field-meta.xml
<CustomField>
    <fullName>People_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>People Leader</label>
    <type>Checkbox</type>
</CustomField>